--- a/Actuators and Power Electronics Report.tex
+++ b/Actuators and Power Electronics Report.tex
@@ -209,9 +209,6 @@ In this subsection, break the problem description down into the fundamental requ
 
 %In this section you should fully explain your design. Include any schematics, models or diagrams of the system. Show and explain the results of your simulation or model. Prove that your design meets the requirements laid out earlier. To convey this information utilize the tools described in the following subsection.
 
-\subsection{Diagrams}
-Before calculations for the final design could take place several assumptions regarding the forces and torques of the hexapod had to be taken into consideration. These can be seen in figures \ref{fig: Diagram 1} and \ref{fig:Diagram 2} along with the hexapod diagrams and variables needed for  the final design.
-
 
 
 
@@ -222,83 +219,12 @@ Before calculations for the final design could take place several assumptions re
 
 %% -------------------------   Sub: Equations, Figures and Tables  -------------------------
 
-\begin{figure}
-
- \centering
-   \includegraphics[width = 0.55\textwidth]{figures/1.png}                \caption{Hexapod diagram with assumptions made}
-   \label{fig: Diagram 1}
-\end{figure}
-
-\begin{figure}
- \centering
-   \includegraphics[width = 0.45\textwidth]{figures/2.png}
-\caption{Diagram for horizontal motor torque of a hexapod.}
-    \label{fig:Diagram 2}
-\end{figure}
-
-% The following declarations will create equations and automatically number them in the document. Notice the equation is given a unique name. You can reference these equations later in the document.
-
-
-\subsection{Equations}
-The was following assumption was made regarding the horizontal force on the hexapod using equation [\ref{eq: Horizontal Force Assumption}]
-\begin{equation} \label{eq: Horizontal Force Assumption}
-	F_1 = 2F_2
-\end{equation}
-
-
-The motor inertia was found using the formula  [\ref{eq: Motor Inertia}]
-\begin{equation} \label{eq: Motor Inertia}
-	J_{motor} = \frac{J_{load}}{n^2}
-\end{equation}
-
-	The first set of e quations focused on the motor inertia as well as the torque value of the model at critical positions along the frame. 
-The horizontal motor was found using the formula below  [\ref{eq: Horizontal Motor Torque}]
-
-
-\begin{multline} \label{eq: Horizontal Motor Torque}
-\Sigma T_5 = T_1 - F_1 (L_1 \cos \theta_1 + L_2 \cos \theta_2) - L_3 W_x\\ + 2F_2 (2L_3 + L_1 \cos \theta_1 + L_2 \cos \theta_2)
-\end{multline}
-
-Another critical factor the torque on the upper leg was also calculated using the below listed formula [\ref{eq: Torque on Upper Arm}]
-
-\begin{multline} \label{eq: Torque on Upper Arm}
-	\Sigma T_{hip} = T_2 - N_1 (L_1 \cos \theta_1 + L_2 \cos \theta_2)\\ +
-	W_1 (L_2 \cos \theta2) -W_4 L_3 -2W_2 L_3 - 2W_3 L_3\\ - 2W1 (2L_3 + L_2 \cos \theta_2)  + 	2N_2 (2L_3 + L_2 \cos \theta_2 + L_1 \cos \theta_1 )
-\end{multline} 
-
-The reaction force on one side of the hexapod for a single leg was represented as the torque for the foot of the leg and was calculated using the equation [\ref{eq: Torque on Foot}]
-
-\begin{multline} \label{eq: Torque on Foot}
-\Sigma T_{Left Foot} = -W_1 L_1 \cos \theta_1 - W_2 (L_1 \cos \theta_1 + L_2 \cos \theta_2)\\ - W_3 (L_1 \cos \theta_1 + L_2 \cos \theta_2) - W_4 ((L_1 \cos \theta_1 + L_2 \cos \theta_2 + L_3)\\ -2W_3 (2L_3 + L_1 \cos \theta_1 + L_2 \cos \theta_2)
-- 2W_2 (L_1 \cos \theta_1 + L_2 \cos \theta_2 +2L_3)\\ - 2W_1 (L_1 \cos \theta_1 + 2L_2 \cos \theta_2 +2L_3)\\ + 2N_2 (2L_1 \cos \theta_1 + 2L_2 \cos \theta_2 +2L_3)
-\end{multline}
-
-The remaining reaction forces were calculated using the equation [\ref{eq: Reaction Forces}]
-\begin{equation} \label{eq: Reaction Forces}
-N_1+2N_2 = W_4+ 6(W_1+W_2+W_3 )
-\end{equation}
-
-The hexpods weight could be calculated as the summation of its component weights as can be seen in equation[\ref{eq: Weight}]
-
-\begin{equation} \label{eq: Weight}
-W_4 = W_{Frame}+W_{Battery}+W_{Elect}
-\end{equation}
-
-
-The hexapods incline control was determined using the following equation [\ref{eq: Incline Control}]
-
-\begin{equation} \label{eq: Incline Control}
-W_x = W \sin \beta
-\end{equation}
-
-
-
 \subsection{Solid works Model}
 The results of these calculations along with the information from the design specifications were used to create the solid works model.
 
 \begin{figure}[h]
  \centering
-   \includegraphics[width = 0.55\textwidth]{figures/3.png}                \caption{Hexapod Solidworks Model}
+   \includegraphics[width = 0.45\textwidth]{figures/3.png}                \caption{Hexapod Solidworks Model}
    \label{fig:Physical Model }
 \end{figure}
 
@@ -359,6 +285,87 @@ I_c =
 It was determined that a solid works model could be used to simplify inertias within the 3 sets of components.\\
 
 In order to understand the kinematic characteristics of a hexapod robot with arbitrary values imputed into link weights and link lengths we normally would use the Denavit-Hartenberg algorithm, applying it to a leg of the hexapod robot. Through the assumption that the model involved is a symmetrical structure composed of six identical legs, having three degrees of freedom in each leg we can thus assume due to symmetry that we only need to work on a single leg with a degree of freedom of 3 rather then the complete model with a degree of freedom of 18.
+
+
+
+\subsection{Diagrams}
+Before calculations for the final design could take place several assumptions regarding the forces and torques of the hexapod had to be taken into consideration. These can be seen in figures \ref{fig: Diagram 1} and \ref{fig:Diagram 2} along with the hexapod diagrams and variables needed for  the final design.
+
+\begin{figure}[h]
+
+ \centering
+   \includegraphics[width = 0.55\textwidth]{figures/1.png}            \caption{Hexapod diagram with assumptions made}
+   \label{fig: Diagram 1}
+\end{figure}
+
+\begin{figure}
+ \centering
+   \includegraphics[width = 0.45\textwidth]{figures/2.png}
+\caption{Diagram for horizontal motor torque of a hexapod.}
+    \label{fig:Diagram 2}
+\end{figure}
+
+
+
+% The following declarations will create equations and automatically number them in the document. Notice the equation is given a unique name. You can reference these equations later in the document.
+
+
+
+
+\subsection{Equations}
+The was following assumption was made regarding the horizontal force on the hexapod using equation [\ref{eq: Horizontal Force Assumption}]
+\begin{equation} \label{eq: Horizontal Force Assumption}
+	F_1 = 2F_2
+\end{equation}
+
+
+The motor inertia was found using the formula  [\ref{eq: Motor Inertia}]
+\begin{equation} \label{eq: Motor Inertia}
+	J_{motor} = \frac{J_{load}}{n^2}
+\end{equation}
+
+	The first set of e quations focused on the motor inertia as well as the torque value of the model at critical positions along the frame. 
+The horizontal motor was found using the formula below  [\ref{eq: Horizontal Motor Torque}]
+
+
+\begin{multline} \label{eq: Horizontal Motor Torque}
+\Sigma T_5 = T_1 - F_1 (L_1 \cos \theta_1 + L_2 \cos \theta_2) - L_3 W_x\\ + 2F_2 (2L_3 + L_1 \cos \theta_1 + L_2 \cos \theta_2)
+\end{multline}
+
+Another critical factor the torque on the upper leg was also calculated using the below listed formula [\ref{eq: Torque on Upper Arm}]
+
+\begin{multline} \label{eq: Torque on Upper Arm}
+	\Sigma T_{hip} = T_2 - N_1 (L_1 \cos \theta_1 + L_2 \cos \theta_2)\\ +
+	W_1 (L_2 \cos \theta2) -W_4 L_3 -2W_2 L_3 - 2W_3 L_3\\ - 2W1 (2L_3 + L_2 \cos \theta_2)  + 	2N_2 (2L_3 + L_2 \cos \theta_2 + L_1 \cos \theta_1 )
+\end{multline} 
+
+The reaction force on one side of the hexapod for a single leg was represented as the torque for the foot of the leg and was calculated using the equation [\ref{eq: Torque on Foot}]
+
+\begin{multline} \label{eq: Torque on Foot}
+\Sigma T_{Left Foot} = -W_1 L_1 \cos \theta_1 - W_2 (L_1 \cos \theta_1 + L_2 \cos \theta_2)\\ - W_3 (L_1 \cos \theta_1 + L_2 \cos \theta_2) - W_4 ((L_1 \cos \theta_1 + L_2 \cos \theta_2 + L_3)\\ -2W_3 (2L_3 + L_1 \cos \theta_1 + L_2 \cos \theta_2)\\
+- 2W_2 (L_1 \cos \theta_1 + L_2 \cos \theta_2 +2L_3)\\ - 2W_1 (L_1 \cos \theta_1 + 2L_2 \cos \theta_2 +2L_3)\\ + 2N_2 (2L_1 \cos \theta_1 + 2L_2 \cos \theta_2 +2L_3)
+\end{multline}
+
+The remaining reaction forces were calculated using the equation [\ref{eq: Reaction Forces}]
+\begin{equation} \label{eq: Reaction Forces}
+N_1+2N_2 = W_4+ 6(W_1+W_2+W_3 )
+\end{equation}
+
+The hexpods weight could be calculated as the summation of its component weights as can be seen in equation[\ref{eq: Weight}]
+
+\begin{equation} \label{eq: Weight}
+W_4 = W_{Frame}+W_{Battery}+W_{Elect}
+\end{equation}
+
+
+The hexapods incline control was determined using the following equation [\ref{eq: Incline Control}]
+
+\begin{equation} \label{eq: Incline Control}
+W_x = W \sin \beta
+\end{equation}
+
+
+
 
 % For an equation in line with text use the following. Note that these types of equations will not be numbered. Also note the use of "$" sign.
 %You can reference the equations above in your document by using their defined label, [\ref{eq: TransientCurrent}] and [\ref{eq: SteadyStateCurrent}]. Steady-state: $I_0= i_0(\omega t =0) = i_0(\omega t = \pi)$. Individual variables can also be called, such as $\omega_0$. 
