design decisions section
added a section to talk about why we chose a servo

--- a/Actuators and Power Electronics Report.tex
+++ b/Actuators and Power Electronics Report.tex
@@ -218,6 +218,8 @@ In this subsection, break the problem description down into the fundamental requ
 
 
 %% -------------------------   Sub: Equations, Figures and Tables  -------------------------
+\subsection{Design Decisions}
+A servo motor was chosen as it allows closed loop control over the the motor allowing for very precise control with any unexpected movements being able to be accounted for. The servo is also faster, and provides more torque per size than a stepper motor does. The benefit of a stepper motor over a servo is that it does not have a limited range of movement like a servo does, however this is not a problem for us as we only need a maximum of 90 degrees of rotation from our motor leaving the servo motor as the clear choice.
 
 \subsection{Solid works Model}
 The results of these calculations along with the information from the design specifications were used to create the solid works model.
