--- a/Actuators and Power Electronics Report.tex
+++ b/Actuators and Power Electronics Report.tex
@@ -392,7 +392,8 @@ Before the models construction,research had first been conducted on various serv
    \includegraphics[width = 0.5\textwidth]{figures/6.png}                \caption{Model showing load effect on motor}
    \label{fig:Model Showing Load Effect on motor}
 \end{figure}
-
+ The figures of the the transfer function and equations used to build said transfer functions can be referred from   \cite{article}
+ 
 
 
 
