--- a/myWorksCited.bib
+++ b/myWorksCited.bib
@@ -42,12 +42,12 @@
   publisher={IOP Publishing}
 }
 
-@article{khadem2019geometric,
-  title={Geometric control of 3D needle steering in soft-tissue},
-  author={Khadem, Mohsen and Rossa, Carlos and Usmani, Nawaid and Sloboda, Ron S and Tavakoli, Mahdi},
-  journal={Automatica},
-  volume={101},
-  pages={36--43},
-  year={2019},
-  publisher={Elsevier}
+
+@article{article,
+author = {Urrea, Claudio and Kern, John},
+year = {2011},
+month = {03},
+pages = {29-38},
+title = {A New Model for Analog Servo Motors. Simulations and Experimental Results},
+volume = {2}
 }
