--- a/Actuators and Power Electronics Report.tex
+++ b/Actuators and Power Electronics Report.tex
@@ -304,7 +304,7 @@ Before calculations for the final design could take place several assumptions re
    \label{fig: Diagram 1}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
  \centering
    \includegraphics[width = 0.45\textwidth]{figures/2.png}
 \caption{Diagram for horizontal motor torque of a hexapod.}
@@ -485,9 +485,7 @@ citation first, followed by the original foreign-language citation \cite{khadem2
 \section{Conclusion and Discussion}
 %/The conclusion should be used to address the success of your design. Answer and discuss if your design met the requirements, had good performance, etc. If applicable, suggest future improvements or applications of the design.
 
-
-Upon the completion of this project an understanding of electromcechanical system control specifically with hexapods was developed. This 
-
+Upon the completion of this project an understanding of electromechanical system control specifically with hexapods was developed. The design was successfully able to implement its desired functions, being able to remain statically on four or more legs and capable of withstanding any stress and strain being placed on the mechanism. The electromechanical simulation of the servo motor simulation calculated a response time of 0.177 seconds, within this time the servo rotates 60 degrees with an average overshoot of 3 Percent. The design manual however had a response time of 0.120 seconds for the servo motor, making this an area for improvement. Other potential improvements to our design included further improvement to the static stability of the device so that it could operate more efficiently and effectively when several of its legs have been disabled. We would also like to fully test our design using inverse kinematics for  pinpoint positioning of the leg. Furthermore, the addition of an  actuation motor and sensors to understand how incline affects the hexapod and include multiple stages as well as having the legs programmed separately in order to make it easier for the robot to walk up stairs. A final improvement would be to redesign the model so that all the legs are actuated, allowing for the hexapod to perform jumps when stuck in difficult walking
 
 
 % Construct references section.
