--- a/myWorksCited.bib
+++ b/myWorksCited.bib
@@ -7,3 +7,19 @@ pages = {29-38},
 title = {A New Model for Analog Servo Motors. Simulations and Experimental Results},
 volume = {2}
 }
+
+
+@article{pullteap2013development,
+  title={Development of a Hexapod Ro Logic Cont},
+  author={Pullteap, S},
+  year={2013}
+}
+
+@article{urrea2016design,
+  title={Design, Simulation, and Control of a Hexapod Robot in Simscape Multibody},
+  author={Urrea, Claudio and Valenzuela, Luis and Kern, John},
+  journal={Applications from Engineering with MATLAB Concepts},
+  pages={126--137},
+  year={2016},
+  publisher={IntechOpen}
+}
