--- a/Actuators and Power Electronics Report.tex
+++ b/Actuators and Power Electronics Report.tex
@@ -57,7 +57,7 @@ Faculty of Engineering and Applied Science, \\
 OntarioTech University, Oshawa, Ontario, Canada\\
 Aidan.barber@ontariotechu.net,
 Aidan.vine@ontariotechu.net,
-Harnoordeep.grewal@ontariotechu.net,
+Harnoordeep.grewal@ontariotechu.net,\\
 Juilius.atherton@ontariotechu.net}
 }
 \maketitle
@@ -307,32 +307,157 @@ In order to understand the kinematic characteristics of a hexapod robot with arb
 \subsection{Diagrams}
 Before calculations for the final design could take place several assumptions regarding the forces and torques of the hexapod had to be taken into consideration. These can be seen in figures \ref{fig: Diagram 1} and \ref{fig:Diagram 2} along with the hexapod diagrams and variables needed for  the final design.
 
+
 \begin{figure}[h]
 
  \centering
-   \includegraphics[width = 0.55\textwidth]{figures/1.png}            \caption{Hexapod diagram with assumptions made}
+   \includegraphics[width = 0.45\textwidth]{figures/11.png}            \caption{Leg of Hexapod Robot}
    \label{fig: Diagram 1}
+   \cite{pullteap2013development}
 \end{figure}
+
+
+
+\subsection{Assumptions and Equations}
+
+The problem of obtaining a robot’s dynamic model is one of the more complex aspects in the field of robotics, and it is necessary for achieving the following objectives: design and evaluation of robot’s dynamic control, sizing of actuators, evaluation of the robot’s mechanical structure, and motion simulation of the robot design.  
+ \cite{pullteap2013development}.
+
+
+
+Before calculating the actuation of the hexapod above assumptions need to be made regarding the torques and forces seen. These can be seen in figures 5 and 6.
+
+\begin{figure}[h]
+
+ \centering
+   \includegraphics[width = 0.45\textwidth]{figures/12.png}            \caption{Topology of Hexapod}
+   \label{fig: Diagram 2}
+\end{figure}
+
+
+\begin{figure}[h]
+
+ \centering
+   \includegraphics[width = 0.55\textwidth]{figures/1.png}            \caption{Weight Distribution and Reaction Force Locations}
+   \label{fig: Diagram 3}
+\end{figure}
+
+
+
+From these figures it can be assumed that reaction forces can be equated to each other through the “3 up 3 down” system, where one side will see the reaction force split between two legs on one side and a single leg on another. From these equations we can derive the formula below relating weight of hexapod to reaction forces.[\ref{eq: Reaction Force to Weight}]
+
+
+\begin{equation} \label{eq: Reaction Force to Weight}
+N_1+2N_2 = W_4+ 6(W_1+W_2+W_3 )
+\end{equation}
+
+With these assumptions we can thus take this further and solve for our motor torques using these reaction forces, through the understanding at static stability the total torque at a location will be zero thus through the equation below we can solve for N2  and  N3.
+ [\ref{eq: Solving for Reaction Force on side with two legs down}]
+
+
+\begin{multline} \label{eq: Solving for Reaction Force on side with two legs down}
+\Sigma T_{Left Foot} = -W_1 L_1 \cos \theta_1 - W_2 (L_1 \cos \theta_1 + L_2 \cos \theta_2)\\ - W_3 (L_1 \cos \theta_1 + L_2 \cos \theta_2) - W_4 ((L_1 \cos \theta_1 + L_2 \cos \theta_2 + L_3)\\ -2W_3 (2L_3 + L_1 \cos \theta_1 + L_2 \cos \theta_2)\\
+- 2W_2 (L_1 \cos \theta_1 + L_2 \cos \theta_2 +2L_3)\\ - 2W_1 (L_1 \cos \theta_1 + 2L_2 \cos \theta_2 +2L_3)\\ + 2N_2 (2L_1 \cos \theta_1 + 2L_2 \cos \theta_2 +2L_3)
+\end{multline}
+
+With N2 solved N1 we can begin solving the motor torque seen at knee location T1 and the motor torque that raises the leg T2.
+
+
+\begin{multline} \label{eq: Motor Reaction Torque at Knee}
+\Sigma T_{Knee} =  T_1 - N_1(L_1 \cos \theta_1) - W_2 (L_2 \cos \theta_2)\\ - W_3 (L_2 \cos \theta_2) - W_4 (L_2 \cos \theta_2 + L_3) -2W_3 (L_2 \cos \theta_2 + 2L_3)\\ - 2W_2 (L_2 \cos \theta_2 + 2L_3) - 2W_1(L_2 \cos \theta_2 + 2L_3)\\ + 2N_2(L_2 \cos \theta_2 + 2L_3 + L_1 \cos \theta_1)
+\end{multline}
+
+
+
+\begin{multline} \label{eq: Solving For Motor Reaction Torque at Leg}
+	\Sigma T_{hip} = T_2 - N_1 (L_1 \cos \theta_1 + L_2 \cos \theta_2)\\ +
+	W_1 (L_2 \cos \theta2) -W_4 L_3 -2W_2 L_3 - 2W_3 L_3\\ - 2W1 (2L_3 + L_2 \cos \theta_2)  + 	2N_2 (2L_3 + L_2 \cos \theta_2 + L_1 \cos \theta_1 )
+\end{multline} 
+
+
+
+From the “3 up 3 down” we can also build a model for the motor torque seen on a horizontal level using the figure below.
+
 
 \begin{figure}[h]
  \centering
-   \includegraphics[width = 0.45\textwidth]{figures/2.png}
-\caption{Diagram for horizontal motor torque of a hexapod.}
-    \label{fig:Diagram 2}
+   \includegraphics[width = 0.45\textwidth]{figures/2.png}                            
+   \caption{Horizontal Movement Diagram}
+   \label{fig: Diagram 4}
 \end{figure}
 
 
 
-% The following declarations will create equations and automatically number them in the document. Notice the equation is given a unique name. You can reference these equations later in the document.
+The was following assumption was made regarding the horizontal force on the hexapod using equation [\ref{eq: Relating Force Seen at Legs Horizontally}]
 
-
-
-
-\subsection{Equations}
-The was following assumption was made regarding the horizontal force on the hexapod using equation [\ref{eq: Horizontal Force Assumption}]
-\begin{equation} \label{eq: Horizontal Force Assumption}
+\begin{equation} \label{eq: Relating Force Seen at Legs Horizontally}
 	F_1 = 2F_2
 \end{equation}
+
+
+Thus allowing the equation below to be used to develop the torque seen on the motors horizontally within static equilibrium. In a perfect world simulation everything would be flat however it is noted that this hexapod would have to be able to achieve static equilibrium even when on inclined surfaces, this can be achieved through the formula below, however for our model it has been noted that sin(x) will have x equal to zero as the hexapod has been actuated in accordance with a flat surface. 
+\cite{urrea2016design}
+
+
+
+
+\begin{multline} \label{eq: Torque Seen Horizontally}
+\Sigma T_5 = T_1 - F_1 (L_1 \cos \theta_1 + L_2 \cos \theta_2) - L_3 W_x\\ + 2F_2 (2L_3 + L_1 \cos \theta_1 + L_2 \cos \theta_2)
+\end{multline}
+
+
+The Torques Calculated using the calculations above assume that the hexapod is static stability using the “3 legs up 3 legs down” model as this is when the highest amount of torque is applied to the motors and what the hexapods actuation needs to accomplish, with a standard 25-50 percent standard of safety applied. Dynamic stability, the stability achieved only when the hexapod is in motion can be actuated using the following torque formulas.
+\cite{Barai2013SMARTHexBotAS}
+
+
+\begin{multline} \label{Dynamic Stability Torque}
+\tau_1 = \ddot{\theta_1} \cdot ( I_1' + I_1'' + M \cdot (l_1^2+R_3^2 ) +m_2 \cdot ( r_2^2 +r_3^2 ))\\
+\end{multline}
+
+\begin{multline} \label{Dynamic Stability Torque2}
+\tau_2 = \ddot{\theta_2} \cdot ( I_2' + I_2'' + Ml_2^2 +m_3r_4^2 ) - g (l_3 cos( \theta_2 + \theta_3 ) (3M + m_1 + \frac{3m_2}{2} )\\ + l_2 cos \theta_2 (2M +m_1 + \frac{m_2}{2} ))\\
+\end{multline}
+
+\begin{multline} \label{Dynamic Stability Torque3}
+\tau_3 = \ddot{\theta_3} \cdot ( I_3' + I_3'' ) - g l_3 cos( \theta_2 + \theta_3 ) (3M + m_1 + \frac{3m_2}{2} )\\
+\end{multline}
+
+When observing the complexity of obtained expressions, it becomes evident that the greater the number of DOF a robot has, the more difficult it is to find the equations, more computer resources are consumed, and longer time and greater effort are spent trying to obtain them. As previously mentioned, an expression for the individual dynamics of a single leg of the hexapod robot is relatively easy to obtain, nevertheless the hexapod robot has six legs, that is a total of 18 DOF, therefore making the simulation more complex.\\
+
+
+
+
+\begin{table}[htbp]
+	\caption{Leg Torque Values}
+	\begin{center}
+		\begin{tabular}{|c|c|}
+			\hline  
+			Foot Torque & 193.25 g/mm \\
+			\hline
+			Leg Torque & 858.85 g/mm\\
+			\hline
+			Thigh Torque & Negligible \\
+			\hline
+		\end{tabular}
+		\end{center}
+	\label{tab3}
+	
+\end{table}
+
+
+
+
+
+
+\begin{figure}[h]
+ \centering
+   \includegraphics[width = 0.45\textwidth]{figures/13.png}                            
+   \caption{Topology of Hexapods Locomotion Through Use of Torques}
+   \cite{10.3389/fnbot.2021.627157}
+   \label{fig: Diagram 5}
+\end{figure}
+
+
 
 
 The motor inertia was found using the formula  [\ref{eq: Motor Inertia}]
@@ -340,32 +465,10 @@ The motor inertia was found using the formula  [\ref{eq: Motor Inertia}]
 	J_{motor} = \frac{J_{load}}{n^2}
 \end{equation}
 
-	The first set of e quations focused on the motor inertia as well as the torque value of the model at critical positions along the frame. 
-The horizontal motor was found using the formula below  [\ref{eq: Horizontal Motor Torque}]
+	
 
 
-\begin{multline} \label{eq: Horizontal Motor Torque}
-\Sigma T_5 = T_1 - F_1 (L_1 \cos \theta_1 + L_2 \cos \theta_2) - L_3 W_x\\ + 2F_2 (2L_3 + L_1 \cos \theta_1 + L_2 \cos \theta_2)
-\end{multline}
-
-Another critical factor the torque on the upper leg was also calculated using the below listed formula [\ref{eq: Torque on Upper Arm}]
-
-\begin{multline} \label{eq: Torque on Upper Arm}
-	\Sigma T_{hip} = T_2 - N_1 (L_1 \cos \theta_1 + L_2 \cos \theta_2)\\ +
-	W_1 (L_2 \cos \theta2) -W_4 L_3 -2W_2 L_3 - 2W_3 L_3\\ - 2W1 (2L_3 + L_2 \cos \theta_2)  + 	2N_2 (2L_3 + L_2 \cos \theta_2 + L_1 \cos \theta_1 )
-\end{multline} 
-
-The reaction force on one side of the hexapod for a single leg was represented as the torque for the foot of the leg and was calculated using the equation [\ref{eq: Torque on Foot}]
-
-\begin{multline} \label{eq: Torque on Foot}
-\Sigma T_{Left Foot} = -W_1 L_1 \cos \theta_1 - W_2 (L_1 \cos \theta_1 + L_2 \cos \theta_2)\\ - W_3 (L_1 \cos \theta_1 + L_2 \cos \theta_2) - W_4 ((L_1 \cos \theta_1 + L_2 \cos \theta_2 + L_3)\\ -2W_3 (2L_3 + L_1 \cos \theta_1 + L_2 \cos \theta_2)\\
-- 2W_2 (L_1 \cos \theta_1 + L_2 \cos \theta_2 +2L_3)\\ - 2W_1 (L_1 \cos \theta_1 + 2L_2 \cos \theta_2 +2L_3)\\ + 2N_2 (2L_1 \cos \theta_1 + 2L_2 \cos \theta_2 +2L_3)
-\end{multline}
-
-The remaining reaction forces were calculated using the equation [\ref{eq: Reaction Forces}]
-\begin{equation} \label{eq: Reaction Forces}
-N_1+2N_2 = W_4+ 6(W_1+W_2+W_3 )
-\end{equation}
+ 
 
 The hexpods weight could be calculated as the summation of its component weights as can be seen in equation[\ref{eq: Weight}]
 
@@ -379,7 +482,6 @@ The hexapods incline control was determined using the following equation [\ref{e
 \begin{equation} \label{eq: Incline Control}
 W_x = W \sin \beta
 \end{equation}
-
 
 
 
@@ -413,19 +515,19 @@ Once the necessary research had been conducted the electromechanical model was d
 
 \begin{figure}[H]
  \centering
-   \includegraphics[width = 0.45\textwidth]{figures/7.png}  \caption{Electromechanical Model of servo motor}
+   \includegraphics[width = 0.45\textwidth]{figures/14.png}  \caption{Electromechanical Model of servo motor}
    \label{fig:Electromechanical Model}
 \end{figure}
 
 The model of the servo motor in figure \ref{fig:Electromechanical Model} uses a PID controller to measure the difference in desired and current position adjusting the voltage output accordingly. It should be noted that the servo motor would also include a potentiometer represented by a block relating voltage to angular position and a pulse with signal, however is was assumed that the pulse with would be generated by the micro controller and their by making creation of the pulse with and by extension the potentiometer relating to it not necessary. During testing the PID controller and gearbox were the only variable tuned as all other variables had been calculated from data sheet and experimental with reference 9g servo model. Both the Kp and gear box were increment together as the kp decreased response time contracting the gearboxes effect on load torque, a Kd value was included to minimize overshoot. Due to the high kp value it was decided to add a saturation block to represent the motoring reaching its max input voltage saturation to allow the model to remain plausible. Though simulation results shown in figure \ref{fig:Electromechanical Model Simulation Results} and figure \ref{fig:Electromechanical Model Simulation varying input positions}  it was concluded that the created motor was able to proved a response time of 0.177 seconds for a 60 degree change and over multiple changes in position was able to average a overshoot of 3 percent each time. 
 \begin{figure}[h]
  \centering
-   \includegraphics[width = 0.45\textwidth]{figures/8.png}                \caption{Electromechanical Model Simulation Results}
+   \includegraphics[width = 0.45\textwidth]{figures/15.png}                \caption{Electromechanical Model Simulation Results}
    \label{fig:Electromechanical Model Simulation Results}
 \end{figure}
 \begin{figure}[h]
  \centering
-   \includegraphics[width = 0.45\textwidth]{figures/9.png}                \caption{Electromechanical Model Simulation Results}
+   \includegraphics[width = 0.45\textwidth]{figures/16.png}                \caption{Electromechanical Model Simulation Results}
    \label{fig:Electromechanical Model Simulation varying input positions}
 \end{figure}
 
