--- a/myWorksCited.bib
+++ b/myWorksCited.bib
@@ -1,4 +1,3 @@
-
 @article{article,
 author = {Urrea, Claudio and Kern, John},
 year = {2011},
@@ -7,7 +6,6 @@ pages = {29-38},
 title = {A New Model for Analog Servo Motors. Simulations and Experimental Results},
 volume = {2}
 }
-
 
 @article{pullteap2013development,
   title={Development of a Hexapod Ro Logic Cont},
@@ -22,4 +20,26 @@ volume = {2}
   pages={126--137},
   year={2016},
   publisher={IntechOpen}
+}
+
+@article{pro,
+  title={SG90 datasheet, equivalent, micro servo.},
+  journal={SG90 Servo Datasheet pdf - Micro Servo. Equivalent, Catalog},
+  author={Pro, Tower}
+}
+
+@incollection{LYNCH2016427,
+title = {Chapter 26 - Gearing and Motor Sizing},
+editor = {Kevin M. Lynch and Nicholas Marchuk and Matthew L. Elwin},
+booktitle = {Embedded Computing and Mechatronics with the PIC32},
+publisher = {Newnes},
+address = {Oxford},
+pages = {427-437},
+year = {2016},
+isbn = {978-0-12-420165-1},
+doi = {https://doi.org/10.1016/B978-0-12-420165-1.00026-3},
+url = {https://www.sciencedirect.com/science/article/pii/B9780124201651000263},
+author = {Kevin M. Lynch and Nicholas Marchuk and Matthew L. Elwin},
+keywords = {Gearing, Gearheads, Reflected inertia, Inertia matching, Motor sizing},
+abstract = {Most DC motors are equipped with a gearhead or some other transmission to increase torque and decrease speed. In this chapter, the reader learns how to choose a motor and gearing to meet required operating conditions. This chapter briefly describes gearing options such as spur, planetary, bevel, and worm gears, as well as harmonic drives, ball and lead screws, and rack and pinions, as well as characteristics such as efficiency, backlash, and backdrivability. Inertia reflected through a gearbox, as well as optimal gearing design by inertia matching, are also discussed.}
 }
