--- a/myWorksCited.bib
+++ b/myWorksCited.bib
@@ -43,3 +43,28 @@ author = {Kevin M. Lynch and Nicholas Marchuk and Matthew L. Elwin},
 keywords = {Gearing, Gearheads, Reflected inertia, Inertia matching, Motor sizing},
 abstract = {Most DC motors are equipped with a gearhead or some other transmission to increase torque and decrease speed. In this chapter, the reader learns how to choose a motor and gearing to meet required operating conditions. This chapter briefly describes gearing options such as spur, planetary, bevel, and worm gears, as well as harmonic drives, ball and lead screws, and rack and pinions, as well as characteristics such as efficiency, backlash, and backdrivability. Inertia reflected through a gearbox, as well as optimal gearing design by inertia matching, are also discussed.}
 }
+
+@inproceedings{Barai2013SMARTHexBotAS,
+  title={SMART-HexBot: a Simulation, Modeling, Analysis and Research Tool for Hexapod Robot in Virtual Reality and Simulink},
+  author={Ranjit Kumar Barai and Pankaj Saha and Anirban Mandal},
+  booktitle={AIR '13},
+  year={2013}
+}
+
+@ARTICLE{10.3389/fnbot.2021.627157,
+AUTHOR={Ouyang, Wenjuan and Chi, Haozhen and Pang, Jiangnan and Liang, Wenyu and Ren, Qinyuan},
+
+TITLE={Adaptive Locomotion Control of a Hexapod Robot via Bio-Inspired Learning},
+
+JOURNAL={Frontiers in Neurorobotics},
+
+VOLUME={15},
+
+YEAR={2021},
+
+URL={https://www.frontiersin.org/article/10.3389/fnbot.2021.627157%7D},
+
+DOI={10.3389/fnbot.2021.627157},
+
+ISSN={1662-5218},
+}
